[package]
name = "rusty-cpp"
version = "0.1.0"
edition = "2021"
authors = ["Shuai Mu <shuai@cs.stonybrook.edu>"]
description = "A Rust-based static analyzer that applies Rust's ownership and borrowing rules to C++ code"
documentation = "https://docs.rs/rusty-cpp"
homepage = "https://github.com/shuaimu/rusty-cpp"
repository = "https://github.com/shuaimu/rusty-cpp"
readme = "README.md"
keywords = ["cpp", "static-analysis", "borrow-checker", "memory-safety", "rust"]
categories = ["development-tools", "development-tools::build-utils"]
license = "MIT OR Apache-2.0"
exclude = ["tests/*", "examples/*", ".git/*", ".github/*", "*.bak"]

[[bin]]
name = "rusty-cpp-checker"
path = "src/main.rs"

[dependencies]
clang = "2.0.0"
clang-sys = "1.8.1"
clap = { version = "4.5.44", features = ["derive"] }
colored = "3.0.0"
miette = "7.6.0"
once_cell = "1.21.3"
petgraph = "0.8.2"
rayon = "1.10.0"
regex = "1.10.2"
serde = "1.0.219"
serde_json = "1.0.142"
z3 = "0.12"

[dev-dependencies]
tempfile = "3.20.0"

[package.metadata.docs.rs]
# This tells docs.rs to skip building the documentation since it requires Z3 and LLVM
no-default-features = true
